@@ -28,6 +28,20 @@ limitations under the License.
 		<artifactId>juno-client</artifactId>
 		<version>1.0.0</version>
 	</parent>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.4</version>
+				<configuration>
+					<argLine>
+						--add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+					</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
 		<dependency>
 			<groupId>com.paypal.juno</groupId>
@@ -110,7 +124,7 @@ limitations under the License.
 		<dependency>
 			<groupId>org.xerial.snappy</groupId>
 			<artifactId>snappy-java</artifactId>
-			<version>1.1.7.2</version>
+			<version>1.1.9.1</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.inject</groupId>
